# docs/swagger.json
@@ -42,7 +42,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateUser"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.CreateUser"
                         }
                     }
                 ],
@@ -52,13 +52,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/apiresponse.SuccessResponse"
+                                    "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.CreateUserResponse"
+                                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.CreateUserResponse"
                                         }
                                     }
                                 }
@@ -68,19 +68,19 @@
                     "400": {
                         "description": "Bad request - validation error",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict - username or email already exists",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     }
                 }
@@ -106,7 +106,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginRequest"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.LoginRequest"
                         }
                     }
                 ],
@@ -116,13 +116,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/apiresponse.SuccessResponse"
+                                    "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.LoginResponse"
+                                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.LoginResponse"
                                         }
                                     }
                                 }
@@ -132,19 +132,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Invalid credentials",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/apiresponse.ErrorResponse"
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
                         }
                     }
                 }
@@ -173,10 +173,115 @@
                     }
                 }
             }
+        },
+        "/protected/createClient": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new user account in the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Client"
+                ],
+                "summary": "Create a new user",
+                "parameters": [
+                    {
+                        "description": "Client creation data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.CreateClient"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Client created successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.CreateClinetReponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request - validation error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict - client name already exists",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/protected/test": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns a success response if JWT is valid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Protected"
+                ],
+                "summary": "Test endpoint",
+                "responses": {
+                    "201": {
+                        "description": "User created successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "apiresponse.ErrorResponse": {
+        "github_com_Kantha2004_SimpleJWT_internal_apiResponse.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -193,7 +298,7 @@
                 }
             }
         },
-        "apiresponse.SuccessResponse": {
+        "github_com_Kantha2004_SimpleJWT_internal_apiResponse.SuccessResponse": {
             "type": "object",
             "properties": {
                 "data": {},
@@ -207,7 +312,29 @@
                 }
             }
         },
-        "models.CreateUser": {
+        "github_com_Kantha2004_SimpleJWT_internal_models.CreateClient": {
+            "type": "object",
+            "required": [
+                "client_name"
+            ],
+            "properties": {
+                "client_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Kantha2004_SimpleJWT_internal_models.CreateClinetReponse": {
+            "type": "object",
+            "required": [
+                "client_secret"
+            ],
+            "properties": {
+                "client_secret": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Kantha2004_SimpleJWT_internal_models.CreateUser": {
             "type": "object",
             "required": [
                 "email",
@@ -234,7 +361,7 @@
                 }
             }
         },
-        "models.CreateUserResponse": {
+        "github_com_Kantha2004_SimpleJWT_internal_models.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "email": {
@@ -251,7 +378,7 @@
                 }
             }
         },
-        "models.LoginRequest": {
+        "github_com_Kantha2004_SimpleJWT_internal_models.LoginRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -268,7 +395,7 @@
                 }
             }
         },
-        "models.LoginResponse": {
+        "github_com_Kantha2004_SimpleJWT_internal_models.LoginResponse": {
             "type": "object",
             "properties": {
                 "expiresAt": {
@@ -280,11 +407,11 @@
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 },
                 "user": {
-                    "$ref": "#/definitions/models.UserInfo"
+                    "$ref": "#/definitions/github_com_Kantha2004_SimpleJWT_internal_models.UserInfo"
                 }
             }
         },
-        "models.UserInfo": {
+        "github_com_Kantha2004_SimpleJWT_internal_models.UserInfo": {
             "type": "object",
             "properties": {
                 "email": {
